--- a/hello.cabal
+++ b/hello.cabal
@@ -20,10 +20,15 @@ library
                      , Descriptor
                      , Square
                      , Shaders
+                     , ShaderLoader
+                     , Drawable
+                     , Initializable
   build-depends:       base >= 4.7 && < 5
                      , GLFW-b
                      , OpenGL
                      , bytestring
+                     , hashmap
+                     , hashable
   default-language:    Haskell2010
 
 executable hello
