--- a/hello.cabal
+++ b/hello.cabal
@@ -25,9 +25,11 @@ library
   build-depends:       base >= 4.7 && < 5
                      , GLFW-b
                      , OpenGL
+                     , OpenGLRaw
                      , bytestring
                      , hashmap
                      , hashable
+                     , Vec
   default-language:    Haskell2010
 
 executable hello
