--- a/stack.yaml
+++ b/stack.yaml
@@ -39,9 +39,8 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-  #extra-deps: 
-  #- GLFW-b-1.4.6
-  #- bindings-GLFW-3.0.3.3
+extra-deps:
+- Vec-1.0.5
 
   #ghc-options:
   # GLFW-b: -fPIC
