--- a/hello.cabal
+++ b/hello.cabal
@@ -25,7 +25,7 @@ library
                      , Application
                      , Cmd
                      , State
-                     , InternalState
+                     , Keyboard
   build-depends:       base >= 4.7 && < 5
                      , GLFW-b
                      , OpenGL
@@ -35,6 +35,7 @@ library
                      , hashable
                      , Vec
                      , containers
+                     , StateVar
   default-language:    Haskell2010
 
 executable hello
