--- a/hello.cabal
+++ b/hello.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Callbacks
+  exposed-modules:     Window
                      , Drawable
                      , Machine
                      , Shaders
@@ -25,6 +25,7 @@ library
                      , Cmd
                      , State
                      , Keyboard
+  other-modules:       CallbackUpdater
   build-depends:       base >= 4.7 && < 5
                      , GLFW-b
                      , OpenGL
